--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.6.1",
     "swiper": "^8.0.7",
