--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.26.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-simple-image-slider": "^2.4.1",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.6.1",
     "swiper": "^8.0.7",
