--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "node-sass": "^7.0.1",
+    "otp-input-react": "^0.3.0",
     "react": "^17.0.2",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
