--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-select": "^5.2.2",
     "react-simple-image-slider": "^2.4.1",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^8.2.0",
     "recoil": "^0.6.1",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4"
