--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "googleapis": "^99.0.0",
     "node-sass": "^7.0.1",
     "otp-input-react": "^0.3.0",
